# SLOT

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml
SLOT/: __init__.py  cluster.py  data.py  genemapping.py  go.py  model.py  plot.py
example_data/: S4_Protein.h5ad
tutorial/: tutorial1_slot_score.ipynb  tutorial2_slot_cluster.ipynb  tutorial3_slot_pattern_match.ipynb
